--- a/Experiment/index.html
+++ b/Experiment/index.html
@@ -53,7 +53,8 @@
             <select id="inputState" class="form-control">
               <option selected>Choose...</option>
               <option>CA</option>
-              <option>LA</option>
+              <option>WA</option>
+              <option>TX</option>
             </select>
           </div>
           <div class="form-group col-md-2">
@@ -69,7 +70,7 @@
             </label>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
+        <button type="submit" class="btn btn-primary">Sign Up</button>
       </form>
 
     </div>
