--- a/about.html
+++ b/about.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> About Macintosh </title>
+    <title> About Pastime </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-    <img class="cover-image" src="image/mac.jpg" alt="A picture of Macintosh">
+    <img class="cover-image" src="image/beach.jpeg" alt="Our Logo">
 
     <div class="center-box">
-        <h2> About Macintosh </h2>
+        <h2> About Pastime </h2>
         <!-- <img src="image/mac_bag.jpg" alt="A picture of Macintosh" width="400px"> -->
-        <p> This new Macintosh has the brand new updated Motorola CPUs, which made a faster machine possible, and in 1987 Apple 
-            took advantage of the new Motorola technology and introduced the Macintosh 
-            II at $5500, powered by a 16 MHz Motorola 68020 processor. The primary 
-            improvement in the Macintosh II was Color QuickDraw in ROM, a color version 
-            of the graphics language which was the heart of the machine. Among the many 
-            innovations in Color QuickDraw were the ability to handle any display size, 
-            any color depth, and multiple monitors. 
+        <p> Our goal is to develop a web app for citizens of a “smart city” to find recreational activities for them, their friends, and their families. It will have the ability to filter by age- category (preschool, 10-12, adults, seniors, etc.), type (coding, sports, design, etc.), and proximity (5 miles, 10 miles, 15 miles, etc.). Cost, dates, and times are additional filters that can be added. The web app will allow users to buy points for the activity they are interested in. These points are stored in an electronic card.
+        
+        These cards are used to “pay” for a set activity price. The set activity price is specified by the activity organizer (known as the service provider). Admins have accounts and complete control over all activities, but activity providers can only edit their created activity.
         </p>
         <a class="btn btn-outline-dark" href="index.html"> Home </a>
     </div>
