add multiple pages

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
+
     <img class="cover-image" src="image/NY-skyline.jpg" alt="A picture of Macintosh">
+
     <div class="center-box">
-        <h1> Pastime </h1>
-        <a class="btn btn-outline-dark" href="about.html"> Learn More </a>
+        <h1> PASTIME </h1>
+        <a class="btn btn-dark" href="about.html"> Learn More </a>
         <br>
-        <a class="btn btn-outline-dark" href="Sign-Up/index.html" > Sign Up </a>
+        <a class="btn btn-dark" href="Sign-Up/index.html" > Sign Up </a>
+        <br>
+        <a class="btn btn-dark" href="login.html">Sign In</a>
     </div>
 </body>
 <script src="script.js"></script>
