--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="css/styles2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>Home</title>
+  </script>
+
   </head>
   <body>
 
@@ -56,178 +58,208 @@
   <div class="album py-5 bg-light">
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+      <form class="" action="/result" method="post">
         <div class="col">
           <div class="card shadow-sm">
               <img src="assests/images/camping.jpg" alt="" height="225px" width="100%">
             <div class="card-body">
-              <h4>Camping</h4>
+
+              <input id="cityInput" type="text" name="City" value="Camping">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button"  class="btn btn-sm btn-outline-secondary">View</button>
+                  <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
                 </div>
+
                 <small class="text-muted">5 miles away</small>
                 <small class"text-muted"> 5 ★</small>
               </div>
             </div>
           </div>
         </div>
+      </form>
 
 
+      <form class="" action="/result" method="post">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="assests/images/hiking.jpg" alt="" height="225px" width="100%">
-
+              <img src="assests/images/soccer.jpg" alt="" height="225px" width="100%">
             <div class="card-body">
-              <h4>Hiking</h4>
+
+              <input id="cityInput" type="text" name="City" value="Soccer">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
                 </div>
-                <small class="text-muted">2.6 miles away</small>
-                <small class"text-muted"> 4.5 ★</small>
+
+                <small class="text-muted">5 miles away</small>
+                <small class"text-muted"> 5 ★</small>
               </div>
             </div>
           </div>
         </div>
+      </form>
 
-
+      <form class="" action="/result" method="post">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="assests/images/gaming.jpg" alt="" height="225px" width="100%">
-
+              <img src="assests/images/hiking.jpg" alt="" height="225px" width="100%">
             <div class="card-body">
-              <h4>Gaming Tournament</h4>
+
+              <input id="cityInput" type="text" name="City" value="Hiking">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
                 </div>
-                <small class="text-muted">10 miles away</small>
-                <small class"text-muted"> 3.8 ★</small>
+
+                <small class="text-muted">5 miles away</small>
+                <small class"text-muted"> 5 ★</small>
               </div>
             </div>
           </div>
         </div>
+      </form>
 
 
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="assests/images/yoga.jpg" alt="" height="225px" width="100%">
+        <form class="" action="/result" method="post">
+          <div class="col">
+            <div class="card shadow-sm">
+                <img src="assests/images/yoga.jpg" alt="" height="225px" width="100%">
+              <div class="card-body">
 
-            <div class="card-body">
-              <h4>Yoga</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <input id="cityInput" type="text" name="City" value="Yoga">
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
+                  </div>
+
+                  <small class="text-muted">5 miles away</small>
+                  <small class"text-muted"> 5 ★</small>
                 </div>
-                <small class="text-muted">20 miles away</small>
-                <small class"text-muted"> 4.7 ★</small>
               </div>
             </div>
           </div>
-        </div>
+        </form>
 
 
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="assests/images/para.png" alt="" height="225px" width="100%">
-            <div class="card-body">
-              <h4>Paragliding</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+        <form class="" action="/result" method="post">
+          <div class="col">
+            <div class="card shadow-sm">
+                <img src="assests/images/gaming.jpg" alt="" height="225px" width="100%">
+              <div class="card-body">
+
+                <input id="cityInput" type="text" name="City" value="Gaming">
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
+                  </div>
+
+                  <small class="text-muted">5 miles away</small>
+                  <small class"text-muted"> 5 ★</small>
                 </div>
-                <small class="text-muted">1 mile away</small>
-                <small class"text-muted"> 4.1 ★</small>
               </div>
             </div>
           </div>
-        </div>
+        </form>
 
 
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="assests/images/volleyball.jpeg" alt="" height="225px" width="100%">
+        <form class="" action="/result" method="post">
+          <div class="col">
+            <div class="card shadow-sm">
+                <img src="assests/images/swim.jpg" alt="" height="225px" width="100%">
+              <div class="card-body">
 
-            <div class="card-body">
-              <h4>Beach volleyball</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <input id="cityInput" type="text" name="City" value="Swimming">
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
+                  </div>
+
+                  <small class="text-muted">5 miles away</small>
+                  <small class"text-muted"> 5 ★</small>
                 </div>
-                <small class="text-muted">4 miles away</small>
-                <small class"text-muted"> 3.2 ★</small>
               </div>
             </div>
           </div>
-        </div>
+        </form>
 
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="assests/images/swim.jpg" alt="" height="225px" width="100%">
+        <form class="" action="/result" method="post">
+          <div class="col">
+            <div class="card shadow-sm">
+                <img src="assests/images/foosball.webp" alt="" height="225px" width="100%">
+              <div class="card-body">
 
-            <div class="card-body">
-              <h4>Swimming</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <input id="cityInput" type="text" name="City" value="Foosball">
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
+                  </div>
+
+                  <small class="text-muted">5 miles away</small>
+                  <small class"text-muted"> 5 ★</small>
                 </div>
-                <small class="text-muted">9 miles away</small>
-                <small class"text-muted"> 3.0 ★</small>
               </div>
             </div>
           </div>
-        </div>
+        </form>
 
 
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="assests/images/soccer.jpg" alt="" height="225px" width="100%">
+        <form class="" action="/result" method="post">
+          <div class="col">
+            <div class="card shadow-sm">
+                <img src="assests/images/para.png" alt="" height="225px" width="100%">
+              <div class="card-body">
 
-            <div class="card-body">
-              <h4>Soccer Tournament</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <input id="cityInput" type="text" name="City" value="Paragliding">
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
+                  </div>
+
+                  <small class="text-muted">5 miles away</small>
+                  <small class"text-muted"> 5 ★</small>
                 </div>
-                <small class="text-muted">3 miles away</small>
-                <small class"text-muted"> 4.2 ★</small>
               </div>
             </div>
           </div>
-        </div>
+        </form>
 
 
-        <div class="col">
-          <div class="card shadow-sm">
-            <img src="assests/images/foosball.webp" alt="" height="225px" width="100%">
+        <form class="" action="/result" method="post">
+          <div class="col">
+            <div class="card shadow-sm">
+                <img src="assests/images/beach.jpeg" alt="" height="225px" width="100%">
+              <div class="card-body">
 
-            <div class="card-body">
-              <h4>Foosball</h4>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <input id="cityInput" type="text" name="City" value="Beach">
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button class="btn btn-sm btn-outline-secondary" type="submit">View</button>
+                  </div>
+
+                  <small class="text-muted">5 miles away</small>
+                  <small class"text-muted"> 5 ★</small>
                 </div>
-                <small class="text-muted">6 miles away</small>
-                <small class"text-muted"> 3.4 ★</small>
               </div>
             </div>
           </div>
-        </div>
+        </form>
 
 
       </div>
     </div>
   </div>
   </main>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="script.js" charset="utf-8"></script>
   </body>
 </html>
