--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
               <img src="assests/images/camping.jpg" alt="" height="225px" width="100%">
             <div class="card-body">
 
-              <input id="cityInput" type="text" name="City" value="Camping">
+              <input id="cityInput" readonly type="text" name="City" value="Camping">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
@@ -87,7 +87,7 @@
               <img src="assests/images/soccer.jpg" alt="" height="225px" width="100%">
             <div class="card-body">
 
-              <input id="cityInput" type="text" name="City" value="Soccer">
+              <input id="cityInput" readonly type="text" name="City" value="Soccer">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
@@ -108,7 +108,7 @@
               <img src="assests/images/hiking.jpg" alt="" height="225px" width="100%">
             <div class="card-body">
 
-              <input id="cityInput" type="text" name="City" value="Hiking">
+              <input id="cityInput" readonly type="text" name="City" value="Hiking">
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
@@ -130,7 +130,7 @@
                 <img src="assests/images/yoga.jpg" alt="" height="225px" width="100%">
               <div class="card-body">
 
-                <input id="cityInput" type="text" name="City" value="Yoga">
+                <input id="cityInput" readonly type="text" name="City" value="Yoga">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -152,7 +152,7 @@
                 <img src="assests/images/gaming.jpg" alt="" height="225px" width="100%">
               <div class="card-body">
 
-                <input id="cityInput" type="text" name="City" value="Gaming">
+                <input id="cityInput" readonly type="text" name="City" value="Gaming">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -174,7 +174,7 @@
                 <img src="assests/images/swim.jpg" alt="" height="225px" width="100%">
               <div class="card-body">
 
-                <input id="cityInput" type="text" name="City" value="Swimming">
+                <input id="cityInput" readonly type="text" name="City" value="Swimming">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -195,7 +195,7 @@
                 <img src="assests/images/foosball.webp" alt="" height="225px" width="100%">
               <div class="card-body">
 
-                <input id="cityInput" type="text" name="City" value="Foosball">
+                <input id="cityInput" readonly type="text" name="City" value="Foosball">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -217,7 +217,7 @@
                 <img src="assests/images/para.png" alt="" height="225px" width="100%">
               <div class="card-body">
 
-                <input id="cityInput" type="text" name="City" value="Paragliding">
+                <input id="cityInput" readonly type="text" name="City" value="Paragliding">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
@@ -239,7 +239,7 @@
                 <img src="assests/images/beach.jpeg" alt="" height="225px" width="100%">
               <div class="card-body">
 
-                <input id="cityInput" type="text" name="City" value="Beach">
+                <input id="cityInput" readonly type="text" name="City" value="Beach">
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
