--- a/signup.html
+++ b/signup.html
@@ -29,33 +29,33 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label >First Name</label>
-            <input  name="FName"class="form-control"  placeholder="John">
+            <input  required="required" name="FName"class="form-control"  placeholder="John">
           </div>
           <div class="form-group col-md-6">
             <label for="">Last Name</label>
-            <input name="LName" class="form-control"  placeholder="Appleseed">
+            <input required="required" name="LName" class="form-control"  placeholder="Appleseed">
           </div>
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email</label>
-            <input type="email" name="Email" class="form-control" id="inputEmail4" placeholder="Email">
+            <input required="required" type="email" name="Email" class="form-control" id="inputEmail4" placeholder="Email">
           </div>
           <div class="form-group col-md-6">
             <label>Password</label>
-            <input type="password" name="Pass" class="form-control" id="inputPassword4" placeholder="Password">
+            <input required="required" type="password" name="Pass" class="form-control" id="inputPassword4" placeholder="Password">
           </div>
         </div>
         <div class="form-group">
           <label for="inputAddress">Street</label>
-          <input type="text" name="Streets"class="form-control" id="inputAddress" placeholder="1234 Main St">
+          <input required="required" type="text" name="Streets"class="form-control" id="inputAddress" placeholder="1234 Main St">
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputCity">City</label>
-            <input type="text" name="City" class="form-control" id="inputCity" placeholder="City">
+            <input required="required" type="text" name="City" class="form-control" id="inputCity" placeholder="City">
           </div>
           <div class="form-group col-md-4">
             <label for="inputState">State</label>
-            <select name="state" id="inputState" class="form-control">
+            <select required="required" name="state" id="inputState" class="form-control">
               <option selected>Choose...</option>
               <option>CA</option>
               <option>WA</option>
@@ -64,7 +64,7 @@
           </div>
           <div class="form-group col-md-2">
             <label for="inputZip">Zip</label>
-            <input name="zips" type="text" class="form-control" id="inputZip" placeholder="12345">
+            <input required="required" name="zips" type="text" class="form-control" id="inputZip" placeholder="12345">
           </div>
         </div>
         <button type="submit" class="btn btn-primary">Sign Up</button>
