add 404, fix responsiveness on home, fixed spelling, add favicons

--- a/about.html
+++ b/about.html
@@ -4,10 +4,15 @@
     <title> About Pastime </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 <body>
 
-    <div class="center-box">
+    <div class="about-box">
         <h2> About Pastime </h2>
         <!-- <img src="image/mac_bag.jpg" alt="A picture of Macintosh" width="400px"> -->
         <p> Our goal is to develop a convenient web app for citizens for the city to find recreational activities for you, your friends, and your families. It will have the ability to filter by age- category (preschool, 10-12, adults, seniors, etc.), and proximity (5 miles, 10 miles, 15 miles, etc.). Cost, dates, and times are additional filters that it is available with. The web app will allow users to buy points for the activity they are interested in. These points are stored in an electronic card.
