--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <title> Pastime </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+
 </head>
 <body>
 
-    <img class="cover-image" src="assests/images/NY-skyline.jpg" alt="A picture of Macintosh">
+    <img class="cover-image" src="assets/images/NY-skyline.jpg" alt="Picture of the New York street, golden hour">
 
     <div class="center-box">
         <h1> PASTIME </h1>
