--- a/login.html
+++ b/login.html
@@ -7,12 +7,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
   </head>
   <body class="text-center">
     <main class="form-signin">
       <form class="" action="/" method="post">
         <div class="">
-        <img class ="tent-image"src="assests/images/tent.png" alt width="90" height="72">
+        <img class ="tent-image"src="assets/images/tent.png" alt width="90" height="72">
         <h4 class="company">PASTIME</h4>
         <h1 class="h3 mb-3 fw-normal"> Sign in</h1>
         <label for="inputEmail" class="virtually-hidden"></label>
