--- a/tryagain.html
+++ b/tryagain.html
@@ -12,7 +12,7 @@
     <main class="form-signin">
       <form class="" action="/" method="post">
         <div class="">
-        <img class ="tent-image"src="assests/images/tent.png" alt width="90" height="72">
+        <img class ="tent-image"src="assets/images/tent.png" alt width="90" height="72">
         <h4 class="company">PASTIME</h4>
         <h1 class="h3 mb-3 fw-normal"> Sign in</h1>
         <h4 class="h3 fw-normal" style="color: red"> Wrong Credentials<br /> Try Again! </h4>
