--- a/login.html
+++ b/login.html
@@ -29,8 +29,8 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button type="submit">Submit</button>
-        <p class="mt-5 mb-3 text-muted">© 2021</p>
+        <button class="btn btn-dark" type="submit">Submit</button>
+        <p class="mt-5 mb-3 text-muted">© 2021 Pasttime</p>
 
       </form>
 
