--- a/adminview.html
+++ b/adminview.html
@@ -2,18 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <title></title>
-  </head>
-  <div class="collapse navbar-collapse top-nav" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-          <a class="navcolor1" href="index.html">Logout</a>
-      </li>
-    </ul>
-  </div>
-  <body>
-    <h4>Here we will implement add/delete/update of the user</h4>
+    <link rel="stylesheet" href="css/styles2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <title>Admin</title>
+    
+  </script>
+  <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
 
-  </body>
-</html>
+  </head>
+  <body>
+
+    User List
+
+    <div id="button-container">
+    </i><a type="button" class="btn btn-light" href="index.html"> <i class="fas fa-home"></i> Edit </a>
+
+</div>
+<div id="button-container">
+</i><a type="button" class="btn btn-light" href="index.html"> <i class="fas fa-home"></i> Delete </a>
+
+</div>
+
+    </body>
+
+    </html>
+    
