--- a/adminview.html
+++ b/adminview.html
@@ -15,11 +15,11 @@
     User List
 
     <div id="button-container">
-    </i><a type="button" class="btn btn-light" href="index.html"> <i class="fas fa-home"></i> Edit </a>
+    </i><a type="button" class="btn btn-dark" href=""> <i class="fas fa-pencil"></i> Edit </a>
 
 </div>
 <div id="button-container">
-</i><a type="button" class="btn btn-light" href="index.html"> <i class="fas fa-home"></i> Delete </a>
+</i><a type="button" class="btn btn-dark" href=""> <i class="fas fa-trash"></i> Delete </a>
 
 </div>
 
