--- a/adminview.html
+++ b/adminview.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/styles2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <title>Admin</title>
-    
+
   </script>
   <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
 
@@ -15,15 +15,17 @@
     User List
 
     <div id="button-container">
-    </i><a type="button" class="btn btn-dark" href=""> <i class="fas fa-pencil"></i> Edit </a>
+
 
 </div>
 <div id="button-container">
-</i><a type="button" class="btn btn-dark" href=""> <i class="fas fa-trash"></i> Delete </a>
+
+  <input type="text" class="form-control col-lg-1" placeholder="Search">
+  <button type="button" class="btn btn-primary btn-lg">
+  <i class="fa fa-search" aria-hidden="true"></i> Search User</button></i>
 
 </div>
 
     </body>
 
     </html>
-    
