--- a/adminview.html
+++ b/adminview.html
@@ -26,6 +26,24 @@
 
 </div>
 
+<table class="user-list">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Edit</th>
+      <th>Delete</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Ian</td>
+      <td>ian@iansoohoo.me</td>
+      <td></i><a type="button" class="btn btn-dark" href="#"> <i class="fas fa-pencil-alt"></i> Edit </a></td>
+      <td></i><a type="button" class="btn btn-dark" id="red" href="#"> <i class="fas fa-trash"></i> Delete </a></td>
+    </tr>
+  </tbody>
+</table>
     </body>
 
     </html>
