--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
           </label>
         </div>
         <button class="btn btn-dark" type="submit">Submit</button>
-        <p class="mt-5 mb-3 text-muted">© 2021 Pasttime</p>
+        <p class="mt-5 mb-3 text-muted">© 2021 Pastime</p>
 
       </form>
 
