--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,8 @@
     <form class="" action="/aftersignup" method="post">
     <div class="py-5 text-center">
       <img class="d-block mx-auto mb-4" src="assets/images/tent.png" alt="" width="72" height="57">
-      <h2>Sign Up</h2>
+      <h4 style="text-align:center;"class="company">PASTIME</h4>
+      <h1 style="padding-left: 3rem;"class="h3 mb-3 fw-normal"> Sign up</h1>
     </div>
     <div class="row g-5">
       <div class="col-md-6 col-lg-12">
