--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 </head>
 <body>
 
-    <img class="cover-image" id="cover" src="assets/images/NY-skyline.jpg" alt="Picture of the New York street, golden hour"> 
+    <img class="cover-image" id="cover" src="assets/images/NY-skyline.jpg" alt="Picture of the New York street, golden hour">
+    <div class="dropdown topnav">
+
+<div class="dropdown">
+  <a style="float:right;" class="dropbtn" href="index.html">Service Provider</a>
+  <div class="dropdown-content">
+  <a href="#">Sign Up</a>
+  <a href="#">Sign in</a>
+  </div>
+</div>
+      <!-- <a style="float:right;" href="index.html">Service Provider</a> -->
+    </div>
 
     <div class="center-box">
         <h1> PASTIME </h1>
