fixed refresh warning

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <a class="btn btn-dark" href="signup.html" > Sign Up </a>
         <br>
         <a class="btn btn-dark" href="login.html">Sign In</a>
+        <br>
+        <a class="btn btn-dark" href="mainpage.html">Home</a>
     </div>
 </body>
 
