--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <div class="dropdown">
   <a style="float:right;" class="dropbtn" href="index.html">Service Provider</a>
   <div class="dropdown-content">
-  <a href="#">Sign Up</a>
-  <a href="#">Sign in</a>
+  <a href="servicesp">Sign Up</a>
+  <a href="servicel">Sign in</a>
   </div>
 </div>
       <!-- <a style="float:right;" href="index.html">Service Provider</a> -->
