fixing about scrolling

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="manifest" href="favicon/site.webmanifest">
 
 </head>
-<body>
-
+<body class="overflow-hidden">
+   
     <img class="cover-image" id="cover" src="assets/images/NY-skyline.jpg" alt="Picture of the New York street, golden hour">
     <div class="dropdown topnav">
 
@@ -36,6 +36,9 @@
         <br>
         <a class="btn btn-dark" href="mainpage.html">Home</a>
     </div>
+
+
+
 </body>
 
 <script> document.getElementById('cover').setAttribute('draggable', false); </script>
