format code and fixing about

--- a/404.html
+++ b/404.html
@@ -4,8 +4,7 @@
 
 <head>
     <title> Pastime | Page Not Found </title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/3ac2a27d06.js" crossorigin="anonymous"></script>
 
@@ -18,12 +17,13 @@
         <p> That page is not found. </p>
 
         <div id="button-container">
-            </i><a type="button" class="btn btn-light" href="index.html"> <i class="fas fa-home"></i> Home </a>
-        
-    </div>
+            </i>
+            <a type="button" class="btn btn-light" href="index.html"> <i class="fas fa-home"></i> Home </a>
+
+        </div>
 
     </div>
-    
+
 </body>
 
 </html>
