--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title> Pastime </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -11,26 +12,27 @@
     <link rel="manifest" href="favicon/site.webmanifest">
 
 </head>
+
 <body class="overflow-hidden">
-   
+
     <img class="cover-image" id="cover" src="assets/images/NY-skyline.jpg" alt="Picture of the New York street, golden hour">
     <div class="dropdown topnav">
 
-<div class="dropdown">
-  <a style="float:right;" class="dropbtn" href="index.html">Service Provider</a>
-  <div class="dropdown-content">
-  <a href="servicesp">Sign Up</a>
-  <a href="servicel">Sign in</a>
-  </div>
-</div>
-      <!-- <a style="float:right;" href="index.html">Service Provider</a> -->
+        <div class="dropdown">
+            <a style="float:right;" class="dropbtn" href="index.html">Service Provider</a>
+            <div class="dropdown-content">
+                <a href="servicesp">Sign Up</a>
+                <a href="servicel">Sign in</a>
+            </div>
+        </div>
+        <!-- <a style="float:right;" href="index.html">Service Provider</a> -->
     </div>
 
     <div class="center-box">
         <h1> PASTIME </h1>
         <a class="btn btn-dark" href="about.html"> Learn More </a>
         <br>
-        <a class="btn btn-dark" href="signup.html" > Sign Up </a>
+        <a class="btn btn-dark" href="signup.html"> Sign Up </a>
         <br>
         <a class="btn btn-dark" href="login.html">Sign In</a>
         <br>
@@ -41,6 +43,8 @@
 
 </body>
 
-<script> document.getElementById('cover').setAttribute('draggable', false); </script>
+<script>
+    document.getElementById('cover').setAttribute('draggable', false);
+</script>
 
 </html>
