--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="overflow-hidden">
 
-    <img class="cover-image" id="cover" src="assets/images/NY-skyline.jpg" alt="Picture of the New York street, golden hour">
+    <img class="cover-image" id="cover" src="assets/images/hero.png" alt="Picture of the New York street, golden hour">
     <div class="dropdown topnav">
 
         <div class="dropdown">
